[build-system]
requires = ["${context.build-system}"]
build-backend = "${context.build-system}.build"

[project]
name = "${context.project-name}"
version = "${context.project-version}"
description = "${context.project-description}"
readme = "README.md"
requires-python = ">=${context.python-version}"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp",
]

[project.scripts]
mcp-server = "examples.greeting.greeting_tool:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py${builtins.replaceStrings ["."] [""] context.python-version}"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "${context.python-version}"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.build]
packages = ["src/examples"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
]
